# panel_force_graph

./: README.md  env.yml  index.html  pyproject.toml  run_force_graph_panel.py
pages/: run_force_graph_panel.html
pyodide/: run_force_graph_panel.js  simple_panel.html  simple_panel.js
pyscript/: simple_panel.html
test_wheels/: force_graph_panel-0.0.1-py3-none-any.whl
